# bonanza

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: main.yaml  pull-requests.yaml
cmd/bonanza_browser/: BUILD.bazel  browser_service.go  generate_stylesheet.js  main.go  pretty.go  stylesheet.css
cmd/bonanza_builder/: BUILD.bazel  main.go
cmd/bonanza_fetcher/: BUILD.bazel  main.go
cmd/bonanza_scheduler/: BUILD.bazel  main.go
docs/: building_bb_storage.md  filesystem_merkletree.md
pkg/bazelclient/formatted/: BUILD.bazel  cursor.go  erase_display.go  no_wrap.go
pkg/crypto/lthash/: BUILD.bazel  hasher.go  hasher_test.go
pkg/encryptedaction/: BUILD.bazel  action.go  action_test.go  aead.go
pkg/model/core/buffered/: BUILD.bazel  object_manager.go
pkg/model/encoding/: BUILD.bazel  binary_encoder.go  chained_binary_encoder.go  chained_binary_encoder_test.go  deterministic_encrypting_binary_encoder.go  deterministic_encrypting_binary_encoder_test.go  encrypting_binary_encoder.go  encrypting_binary_encoder_test.go  encrypting_deterministic_binary_encoder.go  encrypting_deterministic_binary_encoder_test.go  encrypting_keyed_binary_encoder.go  lzw_compressing_binary_encoder.go  lzw_compressing_binary_encoder_test.go
pkg/model/evaluation/: BUILD.bazel  computer.go  executor.go  graphlet.go  keys.go  leak_checking_computer.go  recursive_computer.go  recursive_computer_evaluation_queues.go  recursive_computer_queues.go  recursive_computer_test.go
pkg/model/evaluation/generate_computer/: BUILD.bazel  main.go
pkg/model/executewithstorage/: BUILD.bazel  namespace_adding_client.go  object_exporting_client.go  proto_client.go
pkg/model/fetch/: BUILD.bazel  fetcher.go  http_fetcher.go  local_executor.go  scheme_demultiplexing_fetcher.go
pkg/model/tag/: BUILD.bazel  bound_resolver.go  bound_store.go  bound_updater.go  decodable_key_hash.go  decoding_parameters.go  key_hash.go  mutable_proto_store.go  object_importing_bound_resolver.go  storage_backed_bound_resolver.go  storage_backed_mutable_proto_store.go  storage_backed_mutable_proto_store_test.go
pkg/proto/: BUILD.bazel  proto_api.bzl
pkg/proto/browser/: BUILD.bazel  browser.pb.go  browser.proto
pkg/proto/buildqueuestate/: BUILD.bazel  buildqueuestate.pb.go  buildqueuestate.proto  buildqueuestate_grpc.pb.go
pkg/proto/configuration/bonanza_browser/: BUILD.bazel  bonanza_browser.pb.go  bonanza_browser.proto
pkg/proto/configuration/bonanza_builder/: BUILD.bazel  bonanza_builder.pb.go  bonanza_builder.proto
pkg/proto/configuration/bonanza_fetcher/: BUILD.bazel  bonanza_fetcher.pb.go  bonanza_fetcher.proto
pkg/proto/configuration/bonanza_scheduler/: BUILD.bazel  bonanza_scheduler.pb.go  bonanza_scheduler.proto
pkg/proto/configuration/bonanza_storage_frontend/: BUILD.bazel  bonanza_storage_frontend.pb.go  bonanza_storage_frontend.proto
pkg/proto/configuration/bonanza_storage_shard/: BUILD.bazel  bonanza_storage_shard.pb.go  bonanza_storage_shard.proto
pkg/proto/configuration/bonanza_worker/: BUILD.bazel  bonanza_worker.pb.go  bonanza_worker.proto
pkg/proto/configuration/ds/lossymap/: BUILD.bazel  lossymap.pb.go  lossymap.proto
pkg/proto/configuration/model/parser/: BUILD.bazel  parser.pb.go  parser.proto
pkg/proto/configuration/mount_directory/: BUILD.bazel  mount_directory.pb.go  mount_directory.proto
pkg/proto/configuration/scheduler/: BUILD.bazel  scheduler.pb.go  scheduler.proto
pkg/proto/configuration/storage/object/local/: BUILD.bazel  local.pb.go  local.proto
pkg/proto/encryptedaction/: BUILD.bazel  encryptedaction.pb.go
pkg/proto/model/analysis/: BUILD.bazel  analysis.pb.go  analysis.proto
pkg/proto/model/command/: BUILD.bazel  command.pb.go  command.proto
pkg/proto/model/core/: BUILD.bazel  core.pb.go
pkg/proto/model/encoding/: BUILD.bazel  encoding.pb.go  encoding.proto
pkg/proto/model/evaluation/: BUILD.bazel  evaluation.pb.go  evaluation.proto
pkg/proto/model/evaluation/cache/: BUILD.bazel  cache.pb.go  cache.proto
pkg/proto/model/evaluation/expecteddependencies/: BUILD.bazel  expecteddependencies.pb.go  expecteddependencies.proto
pkg/proto/model/executewithstorage/: BUILD.bazel  executewithstorage.pb.go  executewithstorage.proto
pkg/proto/model/fetch/: BUILD.bazel  fetch.pb.go  fetch.proto
pkg/proto/model/filesystem/: BUILD.bazel  filesystem.pb.go  filesystem.proto
pkg/proto/model/initialsizeclass/: BUILD.bazel  initialsizeclass.pb.go  initialsizeclass.proto
pkg/proto/model/starlark/: BUILD.bazel  starlark.pb.go  starlark.proto
pkg/proto/model/tag/: BUILD.bazel  tag.pb.go  tag.proto
pkg/proto/remoteexecution/: BUILD.bazel  remoteexecution.pb.go  remoteexecution.proto  remoteexecution_grpc.pb.go
pkg/proto/remoteworker/: BUILD.bazel  remoteworker.pb.go  remoteworker.proto  remoteworker_grpc.pb.go
pkg/proto/storage/dag/: BUILD.bazel  dag.pb.go  dag.proto  dag_grpc.pb.go
pkg/proto/storage/object/: BUILD.bazel  object.pb.go  object.proto  object_grpc.pb.go
pkg/proto/storage/object/local/: BUILD.bazel  local.pb.go
pkg/proto/storage/tag/: BUILD.bazel  tag.pb.go  tag.proto  tag_grpc.pb.go
pkg/storage/dag/grpc/: BUILD.bazel  uploader.go  uploader_test.go
pkg/storage/dag/namespacemapping/: BUILD.bazel  namespace_adding_uploader.go
pkg/storage/object/sharded/: BUILD.bazel  downloader.go  uploader.go
pkg/storage/tag/: BUILD.bazel  key.go  resolver.go  resolver_server.go  signed_value.go  store.go  updater.go  updater_server.go
pkg/storage/tag/grpc/: BUILD.bazel  resolver.go  resolver_test.go  updater.go  updater_test.go
pkg/storage/tag/leasemarshaling/: BUILD.bazel  updater.go  updater_test.go
pkg/storage/tag/leaserenewing/: BUILD.bazel  resolver.go
pkg/storage/tag/local/: BUILD.bazel  block_device_backed_tag_record_array.go  store.go  tag_record_array_factory.go
pkg/storage/tag/mirrored/: BUILD.bazel  resolver.go  resolver_test.go  updater.go  updater_test.go
pkg/storage/tag/namespacemapping/: BUILD.bazel  namespace_adding_resolver.go
pkg/storage/tag/sharded/: BUILD.bazel  resolver.go  updater.go
(+309 files in other folders)
