load("@build_bonanza_npm//:defs.bzl", "npm_link_all_packages")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")

exports_files(["LICENSE"])

# gazelle:go_grpc_compilers @rules_go//proto:go_proto,@rules_go//proto:go_grpc_v2
# gazelle:go_naming_convention_external import
# gazelle:prefix bonanza.build
# gazelle:proto_import_prefix bonanza.build
# gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status
# gazelle:resolve proto google/rpc/status.proto @googleapis//google/rpc:status_proto
# gazelle:resolve_regexp proto github.com/buildbarn/bb-remote-execution/(.*)/(.*)\.proto @com_github_buildbarn_bb_remote_execution//$1:${2}_proto
# gazelle:resolve_regexp proto github.com/buildbarn/bb-storage/(.*)/(.*)\.proto @com_github_buildbarn_bb_storage//$1:${2}_proto
# gazelle:resolve_regexp proto go github.com/buildbarn/bb-remote-execution/(.*)/(.*)\.proto @com_github_buildbarn_bb_remote_execution//$1:$2
# gazelle:resolve_regexp proto go github.com/buildbarn/bb-storage/(.*)/(.*)\.proto @com_github_buildbarn_bb_storage//$1:$2
gazelle(
    name = "gazelle",
)

buildifier(
    name = "buildifier",
)

npm_link_all_packages(
    name = "node_modules",
)
