module(name = "build_bonanza")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "bazel_remote_apis", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "com_github_buildbarn_bb_remote_execution")
bazel_dep(name = "com_github_buildbarn_bb_storage")
bazel_dep(name = "com_github_buildbarn_go_xdr")
bazel_dep(name = "cel-spec", version = "0.25.1")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "googleapis", version = "0.0.0-20260109-6145b5ff")
bazel_dep(name = "jsonnet_go", version = "0.21.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_jsonnet", version = "0.7.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

git_override(
    module_name = "bazel_remote_apis",
    commit = "b02e15a6d354e2fb553216132ccec79f3f5b39cb",
    remote = "https://github.com/bazelbuild/remote-apis.git",
)

git_override(
    module_name = "com_github_buildbarn_bb_remote_execution",
    commit = "749fb408bd300672b8f13860253d07fdc26c49ff",
    remote = "https://github.com/buildbarn/bb-remote-execution.git",
)

git_override(
    module_name = "com_github_buildbarn_bb_storage",
    commit = "d7d4116607aef3973ab64865b4f4d452d9e1ef3d",
    remote = "https://github.com/buildbarn/bb-storage.git",
)

git_override(
    module_name = "com_github_buildbarn_go_xdr",
    commit = "236788cf9e8948a1e8875c7dd243e2be180cdfd7",
    remote = "https://github.com/buildbarn/go-xdr.git",
)

single_version_override(
    module_name = "jsonnet_go",
    patches = ["//:patches/jsonnet_go/bazel-9.diff"],
)

git_override(
    module_name = "rules_antlr",
    commit = "89a29cca479363a5aee53e203719510bdc6be6ff",
    patches = [
        "//:patches/rules_antlr/antlr-4.10.diff",
        "//:patches/rules_antlr/bzlmod.diff",
    ],
    remote = "https://github.com/marcohu/rules_antlr.git",
)

single_version_override(
    module_name = "toolchains_llvm",
    patches = ["//:patches/toolchains_llvm/non-root.diff"],
)

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.copy_to_directory()
use_repo(bazel_lib_toolchains, "copy_to_directory_toolchains")

register_toolchains("@copy_to_directory_toolchains//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_gofumpt",
    "com_github_bazelbuild_buildtools",
    "com_github_bluekeyes_go_gitdiff",
    "com_github_buildbarn_go_cdc",
    "com_github_ericlagergren_siv",
    "com_github_google_uuid",
    "com_github_kballard_go_shellquote",
    "com_github_prometheus_client_golang",
    "com_github_stretchr_testify",
    "com_github_ulikunitz_xz",
    "dev_maragu_gomponents",
    "io_filippo_edwards25519",
    "net_starlark_go",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_grpc_security_advancedtls",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_lint",
    "org_golang_x_sync",
    "org_golang_x_term",
    "org_uber_go_mock",
)

go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.module_override(
    patches = ["//:patches/com_github_bluekeyes_go_gitdiff/no-drop-a-b-slash.diff"],
    path = "github.com/bluekeyes/go-gitdiff",
)
go_deps_dev.gazelle_override(
    build_file_generation = "on",
    path = "github.com/cncf/xds/go",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/com_github_grpc_ecosystem_go_grpc_prometheus/client-metrics-prevent-handled-twice.diff"],
    path = "github.com/grpc-ecosystem/go-grpc-prometheus",
)
go_deps_dev.module_override(
    patches = [
        "@com_github_buildbarn_bb_remote_execution//:patches/com_github_hanwen_go_fuse_v2/direntrylist-offsets-and-testability.diff",
        "@com_github_buildbarn_bb_remote_execution//:patches/com_github_hanwen_go_fuse_v2/writeback-cache.diff",
        "@com_github_buildbarn_bb_remote_execution//:patches/com_github_hanwen_go_fuse_v2/notify-testability.diff",
    ],
    path = "github.com/hanwen/go-fuse/v2",
)
go_deps_dev.module_override(
    patches = ["//:patches/org_golang_x_lint/generic.diff"],
    path = "golang.org/x/lint",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/org_golang_x_sys/o-search.diff"],
    path = "golang.org/x/sys",
)
go_deps_dev.module_override(
    patches = ["@com_github_buildbarn_bb_storage//:patches/cc_mvdan_gofumpt/unused-receiver-idents.diff"],
    path = "mvdan.cc/gofumpt",
)
go_deps_dev.module_override(
    patches = [
        "@com_github_buildbarn_bb_storage//:patches/org_uber_go_mock/generics.diff",
        "@com_github_buildbarn_bb_storage//:patches/org_uber_go_mock/mocks-for-funcs.diff",
    ],
    path = "go.uber.org/mock",
)
go_deps_dev.module_override(
    patches = [
        "//:patches/net_starlark_go/thread.diff",
        "//:patches/net_starlark_go/dict-get-pop.diff",
        "//:patches/net_starlark_go/function-saving.diff",
        "//:patches/net_starlark_go/getattr-error-checking.diff",
        "//:patches/net_starlark_go/octal.diff",
        "//:patches/net_starlark_go/unwrap.diff",
        "//:patches/net_starlark_go/set-isdisjoint.diff",
    ],
    path = "go.starlark.net",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain_llvm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "build_bonanza_npm",
    link_workspace = "build_bonanza",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "build_bonanza_npm")
