load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "encryptedaction",
    srcs = [
        "action.go",
        "aead.go",
        "event_encoder.go",
    ],
    importpath = "bonanza.build/pkg/encryptedaction",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/encryptedaction",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_ericlagergren_siv//:siv",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "encryptedaction_test",
    srcs = ["action_test.go"],
    deps = [
        ":encryptedaction",
        "//pkg/proto/encryptedaction",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
