load("@rules_go//extras:gomock.bzl", "gomock")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "evaluation",
    srcs = [
        "computer.go",
        "environment.go",
        "executor.go",
        "keys.go",
        "leak_checking_computer.go",
        "recursive_computer.go",
        "recursive_computer_evaluation_queues.go",
    ],
    importpath = "bonanza.build/pkg/model/evaluation",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/crypto/lthash",
        "//pkg/model/core",
        "//pkg/model/core/btree",
        "//pkg/model/core/buffered",
        "//pkg/model/core/inlinedtree",
        "//pkg/model/encoding",
        "//pkg/model/executewithstorage",
        "//pkg/model/parser",
        "//pkg/model/tag",
        "//pkg/proto/model/core",
        "//pkg/proto/model/evaluation",
        "//pkg/proto/model/evaluation/cache",
        "//pkg/proto/model/tag",
        "//pkg/proto/remoteworker",
        "//pkg/remoteworker",
        "//pkg/storage/dag",
        "//pkg/storage/dag/namespacemapping",
        "//pkg/storage/object",
        "//pkg/storage/object/namespacemapping",
        "//pkg/storage/tag",
        "//pkg/storage/tag/namespacemapping",
        "//pkg/sync",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "evaluation_test",
    srcs = [
        "mocks_encoding_test.go",
        "mocks_evaluation_test.go",
        "recursive_computer_test.go",
    ],
    embed = [":evaluation"],
    deps = [
        "//pkg/model/core",
        "//pkg/proto/model/core",
        "//pkg/proto/model/evaluation",
        "//pkg/proto/model/evaluation/cache",
        "//pkg/storage/object",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",  # keep
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_uber_go_mock//gomock",
    ],
)

gomock(
    name = "mocks_encoding",
    out = "mocks_encoding_test.go",
    interfaces = [
        "DeterministicBinaryEncoder",
        "KeyedBinaryEncoder",
    ],
    library = "//pkg/model/encoding",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "evaluation_test",
)

gomock(
    name = "mocks_evaluation",
    out = "mocks_evaluation_test.go",
    interfaces = [
        "BoundResolverForTesting",
        "ComputerForTesting",
        "LookupResultReaderForTesting",
        "KeysReaderForTesting",
        "ObjectManagerForTesting",
    ],
    library = "//pkg/model/evaluation",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "evaluation_test",
)
