load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "fetch",
    srcs = [
        "fetcher.go",
        "http_fetcher.go",
        "local_executor.go",
        "scheme_demultiplexing_fetcher.go",
    ],
    importpath = "bonanza.build/pkg/model/fetch",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model/core",
        "//pkg/model/encoding",
        "//pkg/model/executewithstorage",
        "//pkg/model/filesystem",
        "//pkg/model/parser",
        "//pkg/proto/model/fetch",
        "//pkg/proto/remoteworker",
        "//pkg/remoteworker",
        "//pkg/storage/dag",
        "//pkg/storage/object",
        "//pkg/storage/object/namespacemapping",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/pool",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)
