load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tag",
    srcs = [
        "key.go",
        "resolver.go",
        "resolver_server.go",
        "signed_value.go",
        "store.go",
        "updater.go",
        "updater_server.go",
    ],
    importpath = "bonanza.build/pkg/storage/tag",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/storage/tag",
        "//pkg/storage/object",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
