load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "scheduler_proto",
    srcs = ["scheduler.proto"],
    import_prefix = "bonanza.build",
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:duration_proto",
        "@protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "scheduler_go_proto",
    importpath = "bonanza.build/pkg/proto/configuration/scheduler",
    proto = ":scheduler_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "scheduler",
    embed = [":scheduler_go_proto"],
    importpath = "bonanza.build/pkg/proto/configuration/scheduler",
    visibility = ["//visibility:public"],
)
