load("@rules_go//extras:gomock.bzl", "gomock")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = ["uploader.go"],
    importpath = "bonanza.build/pkg/storage/dag/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/storage/dag",
        "//pkg/storage/dag",
        "//pkg/storage/object",
        "//pkg/storage/tag",
        "//pkg/sync",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//semaphore",
    ],
)

go_test(
    name = "grpc_test",
    srcs = [
        "mocks_dag_pb_test.go",
        "mocks_dag_test.go",
        "uploader_test.go",
    ],
    embed = [":grpc"],
    deps = [
        "//pkg/proto/storage/dag",
        "//pkg/proto/storage/object",
        "//pkg/storage/dag",  # keep
        "//pkg/storage/object",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",  # keep
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//semaphore",
        "@org_uber_go_mock//gomock",
    ],
)

gomock(
    name = "mocks_dag",
    out = "mocks_dag_test.go",
    interfaces = ["ObjectContentsWalker"],
    library = "//pkg/storage/dag",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "grpc_test",
)

gomock(
    name = "mocks_dag_pb",
    out = "mocks_dag_pb_test.go",
    interfaces = [
        "UploaderClient",
        "Uploader_UploadDagsClient",
        "Uploader_UploadDagsServer",
    ],
    library = "//pkg/proto/storage/dag",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "grpc_test",
)
