load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sharded",
    srcs = [
        "downloader.go",
        "log2fixed64.go",
        "picker.go",
        "uploader.go",
        "weighted_rendezvous_picker.go",
    ],
    importpath = "bonanza.build/pkg/storage/object/sharded",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage/object",
        "@com_github_buildbarn_bb_storage//pkg/util",
    ],
)

go_test(
    name = "sharded_test",
    srcs = [
        "log2fixed64_test.go",
        "weighted_rendezvous_picker_test.go",
    ],
    deps = [
        ":sharded",
        "@com_github_stretchr_testify//assert",
    ],
)
