load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sharded",
    srcs = [
        "resolver.go",
        "updater.go",
    ],
    importpath = "bonanza.build/pkg/storage/tag/sharded",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/storage/object/sharded",
        "//pkg/storage/tag",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//proto",
    ],
)
