load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "cache_proto",
    srcs = ["cache.proto"],
    import_prefix = "bonanza.build",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/model/core:core_proto",
        "//pkg/proto/model/evaluation:evaluation_proto",
        "//pkg/proto/model/tag:tag_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "cache_go_proto",
    importpath = "bonanza.build/pkg/proto/model/evaluation/cache",
    proto = ":cache_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/model/core",
        "//pkg/proto/model/evaluation",
        "//pkg/proto/model/tag",
    ],
)

go_library(
    name = "cache",
    embed = [":cache_go_proto"],
    importpath = "bonanza.build/pkg/proto/model/evaluation/cache",
    visibility = ["//visibility:public"],
)
